@@ -124,6 +124,7 @@ namespace ORNG {
 		glm::vec3 m_scale = glm::vec3(1.0f, 1.0f, 1.0f);
 		glm::vec3 m_orientation = glm::vec3(0.0f, 0.0f, 0.0f);
 		glm::vec3 m_pos = glm::vec3(0.0f, 0.0f, 0.0f);
+		glm::vec3 g_up = { 0.0, 1.0, 0.0 };
 
 	};
 
